--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
     <string name="app_name">InnovatorSetup</string>
-    <string name="action_settings">Settings</string>
-    <string name="this_is_a_test">This is a test</string>
+    <string name="setup_grade_select_text">What grade are you in?</string>
 </resources>
