Added new activity/page for activity select screen.
Added new screen and GUI for activity goal selection. Progress bar resets when the screen changes, however, and will need to be fixed. Also, the transition from grade select to goal select is a bit awkward.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">InnovatorSetup</string>
     <string name="setup_grade_select_text">What grade are you in?</string>
+    <string name="setup_activity_select_text">Pick a goal:</string>
 </resources>
