--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="play_again">Play again</string>
     <string name="time">15</string>
     <string name="correct">Correct!</string>
+    <string name="incorrect">Incorrect</string>
+    <string name="try_again">Try Again</string>
+    <string name="explanation_label">Explanation</string>
     <string name="timeup">Time Up</string>
     <string name="play_game">Play Game</string>
     <string name="quit">Quit</string>
