--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="play_again">Play again</string>
     <string name="time">15</string>
     <string name="correct">Correct!</string>
+    <string name="congrats">Congratulations! You have finished the questions!</string>
+    <string name="back_home">Return Home</string>
     <string name="incorrect">Incorrect</string>
     <string name="try_again">Try Again</string>
     <string name="explanation_label">Explanation</string>
