--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_explore">Explore</string>
     <string name="title_account">Account</string>
     <string name="title_settings">Settings</string>
+    <string name="title_progress">Progress</string>
 
     <string name="question">Question</string>
     <string name="play_again">Play again</string>
